angular2 small chnages

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,6 @@
   </head>
 
   <body>
-    <app-root>Loading...</app-root>
+    <app-root>Loading......venkaiahpage</app-root>
   </body>
 </html>
